CMAKE_MINIMUM_REQUIRED(VERSION 2.6 FATAL_ERROR)

PROJECT(GameServer)

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/)

ADD_DEFINITIONS(-D__LINUX__)
FILE(GLOB_RECURSE SRC_LIST ${PROJECT_SOURCE_DIR}/src/*.cc)

ADD_EXECUTABLE(GameServer ${SRC_LIST} ${COM_SRC_LIST})
TARGET_LINK_LIBRARIES(GameServer pthread)

SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -gdwarf-2 -std=c++11")
SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)

MESSAGE(STATUS "GameServer_OUTPUT_PATH:" ${EXECUTABLE_OUTPUT_PATH})
